Mejora de diseño de la pagina

--- a/index.html
+++ b/index.html
@@ -4,79 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página</title>
+    <title>Nunu & Willump - League of Legends</title>
+    <link rel="icon" type="image/png" href="imagenes/icon.png">
     <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
     <header>
-        <h1>Bienvenido a Mi Página</h1>
+        <h1>Nunu & Willump</h1>
+        <h2>Los Mejores Amigos de Freljord</h2>
     </header>
     <nav>
         <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#sobre-mi">Sobre Mí</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#inicio">Historia</a></li>
+            <li><a href="habilidades.html">Habilidades</a></li>
+            <li><a href="#cinematica">Cinematica</a></li>
         </ul>
     </nav>
     <main>
         <section>
             <article id="inicio">
-                <h2>Inicio</h2>
-                <p>Contenido de la sección de inicio.</p>
+                <h2>Historia</h2>
+                <p>Nunu & Willump son un dúo único en League of Legends. Nunu es un joven muchacho con un corazón puro y una imaginación desbordante, mientras que Willump es el último de los yetis, una criatura mágica con un gran poder y sabiduría ancestral.</p>
+                <p>En las heladas tierras de Freljord, Nunu era un niño huérfano que servía a una cruel hechicera. Un día, mientras buscaba el legendario monstruo come-niños que la hechicera le había ordenado encontrar, Nunu descubrió a Willump. En lugar de encontrar una bestia aterradora, encontró a un amigable yeti que compartía su amor por las aventuras y los juegos.</p>
+                <p>Desde entonces, los dos se volvieron inseparables, viajando por Freljord y ayudando a otros mientras comparten risas y historias. Su amistad es una prueba de que la magia más poderosa es el vínculo entre verdaderos amigos.</p>
+                <img src="imagenes/Nunu.jpg" alt="nunu">
             </article>
-            <article id="sobre-mi">
-                <h2>Sobre Mí</h2>
-                <p>Contenido de la sección sobre mí.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
-            </article>
-            <article id="contacto">
-                <h2>Contacto</h2>
-                <p>Contenido de la sección de contacto.</p>
+            
+            <article id="cinematica">
+                <h2>Cinemática de Campeón</h2>
+                <iframe width="560" height="315" src="videos/cinematica.mp4" frameborder="0" allowfullscreen></iframe>
             </article>
         </section>
+        
         <aside>
-            <h2>Noticias</h2>
-            <p>Últimas noticias y actualizaciones.</p>
+            <h2>Datos Curiosos</h2>
+            <ul>
+                <li>Nunu & Willump fueron reworkeados en 2018</li>
+                <li>Son excelentes junglers por su habilidad para controlar objetivos</li>
+                <li>Su bola de nieve gigante (W) es una de las habilidades más divertidas del juego</li>
+                <li>Tienen varias líneas de diálogo que muestran su amistad</li>
+            </ul>
         </aside>
     </main>
     <footer>
-        <p>&copy; 2023 Mi Página. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Nunu & Willump Fan Page. Todos los derechos reservados.</p>
     </footer>
 </body>
 
