--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nunu & Willump - League of Legends</title>
+    <title>Nunu & Willump</title>
     <link rel="icon" type="image/png" href="imagenes/icon.png">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <meta name="author" content="Luis Sedano">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <ul>
             <li><a href="#inicio">Historia</a></li>
             <li><a href="habilidades.html">Habilidades</a></li>
-            <li><a href="#cinematica">Cinematica</a></li>
+            <li><a href="aspectos.html">Aspectos</a></li>
         </ul>
     </nav>
     <main>
@@ -33,17 +34,25 @@
             
             <article id="cinematica">
                 <h2>Cinemática de Campeón</h2>
-                <iframe width="560" height="315" src="videos/cinematica.mp4" frameborder="0" allowfullscreen></iframe>
+                <video src="videos/cinematica.mp4" controls></video>
             </article>
         </section>
         
         <aside>
             <h2>Datos Curiosos</h2>
             <ul>
-                <li>Nunu & Willump fueron reworkeados en 2018</li>
-                <li>Son excelentes junglers por su habilidad para controlar objetivos</li>
-                <li>Su bola de nieve gigante (W) es una de las habilidades más divertidas del juego</li>
-                <li>Tienen varias líneas de diálogo que muestran su amistad</li>
+                <li>
+                    <p>Nunu & Willump fueron reworkeados en 2018</p>
+                    <img src="imagenes/Nunu_OriginalCentered.jpg" alt="Antiguo Nunu & Willump">
+                </li>
+                <li>
+                    <p>Son excelentes junglers por su habilidad para controlar objetivos</p>
+                    <video src="videos/baron.mp4" controls></video>
+                </li>
+                <li>
+                    <p>Su bola de nieve gigante (W) es una de las habilidades más divertidas del juego</p>
+                    <video src="videos/nunuvideobola.mp4" alt="Bola de nieve gigante" controls start="86"></video>
+                </li>
             </ul>
         </aside>
     </main>
