--- a/aspectos.html
+++ b/aspectos.html
@@ -21,38 +21,45 @@
             <li><a href="index.html">Historia</a></li>
             <li><a href="habilidades.html">Habilidades</a></li>
             <li><a href="aspectos.html">Aspectos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <main>
         <section>
             <article>
                 <h2>Aspectos de Nunu & Willump</h2>
-                <div class="aspectos-fotos">
-                    <div class="aspecto">
-                        <img src="imagenes/Nunu_2.jpg" alt="Nunu y Willump taller de juguetes">
-                        <p>Nunu y Willump taller de juguetes</p>
-                    </div>
-                    <div class="aspecto">
-                        <img src="imagenes/Nunu_4.jpg" alt="Bot Nunu">
-                        <p>Bot Nunu</p>
-                    </div>
-                    <div class="aspecto">
-                        <img src="imagenes/Nunu_26.jpg" alt="Nunu y Abejillump">
-                        <p>Nunu y Abejillump</p>
-                    </div>
-                    <div class="aspecto">
-                        <img src="imagenes/Nunu_35.jpg" alt="Nunu y Willump aladines cosmicos">
-                        <p>Nunu y Willump aladines cosmicos</p>
-                    </div>
-                    <div class="aspecto">
-                        <img src="imagenes/Nunu_16.jpg" alt="Nunu y Willump onda espacial">
-                        <p>Nunu y Willump onda espacial</p>
-                    </div>
-                    <div class="aspecto">
-                        <img src="imagenes/Nunu_5.jpg" alt="Nunu el demoledor">
-                        <p>Nunu el demoledor</p>
-                    </div>
-                </div>
+                <table>
+                    <tr>
+                        <td>
+                            <img src="imagenes/Nunu_2.jpg" alt="Nunu y Willump taller de juguetes">
+                            <p>Nunu y Willump taller de juguetes</p>
+                        </td>
+                        <td>
+                            <img src="imagenes/Nunu_4.jpg" alt="Bot Nunu">
+                            <p>Bot Nunu</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="imagenes/Nunu_26.jpg" alt="Nunu y Abejillump">
+                            <p>Nunu y Abejillump</p>
+                        </td>
+                        <td>
+                            <img src="imagenes/Nunu_35.jpg" alt="Nunu y Willump aladines cosmicos">
+                            <p>Nunu y Willump aladines cosmicos</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="imagenes/Nunu_16.jpg" alt="Nunu y Willump onda espacial">
+                            <p>Nunu y Willump onda espacial</p>
+                        </td>
+                        <td>
+                            <img src="imagenes/Nunu_5.jpg" alt="Nunu el demoledor">
+                            <p>Nunu el demoledor</p>
+                        </td>
+                    </tr>
+                </table>
             </article>
         </section>
         
