--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#inicio">Historia</a></li>
             <li><a href="habilidades.html">Habilidades</a></li>
             <li><a href="aspectos.html">Aspectos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <main>
