--- a/habilidades.html
+++ b/habilidades.html
@@ -21,6 +21,7 @@
             <li><a href="index.html">Historia</a></li>
             <li><a href="habilidades.html">Habilidades</a></li>
             <li><a href="aspectos.html">Aspectos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <main class="habilidades-container">
@@ -51,7 +52,7 @@
             </article>
             
             <article>
-                <h3>Ventisca</h3>
+                <h3>Ventisca</h4>
                 <h4>E</h4>
                 <img src="imagenes/alud_bolas.png" alt="Snowball Barrage">
                 <p>Lanzan bolas de nieve que ralentizan a los enemigos. Si golpean a un enemigo varias veces, lo enraízan.</p>
